--- a/views/partials/_section.pug
+++ b/views/partials/_section.pug
@@ -6,6 +6,11 @@ mixin product
         | Tai Nghe Dareu EH416 D&acirc;y USB, Gi&#x1EA3; L&#x1EAD;p 7.1
       .product-info
         .product-info__rating
+          i.fa-solid.fa-star
+          i.fa-solid.fa-star
+          i.fa-solid.fa-star
+          i.fa-solid.fa-star
+          i.fa-solid.fa-star
         .product-info__price
           span.product-info__price--sale
             | 500.000
