--- a/views/base.pug
+++ b/views/base.pug
@@ -7,9 +7,9 @@ head
     link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css')
     title Document
 body
-    include _header
+    include partials/_header
     block content 
         .container 
-            include _section
-            include _section
-    include _footer
+            include partials/_section
+            include partials/_section
+    include partials/_footer
