--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -3,6 +3,8 @@ header.header
   div
     .header__main
       .header__inner
+        .mobile-nav
+          i.fa-solid.fa-bars
         .header__logo
           a(href="/")
             img(src="https://phukienabc.com/wp-content/uploads/2022/10/phukienabc.svg", alt="logo")
@@ -12,20 +14,26 @@ header.header
               span Sản Phẩm
             ul.header__menu-wrap
               li.header__menu-item
-                a(href="/") Dây cáp
+                a(href="/") Bàn Phím, Chuột, Gaming Gear
                 ul.header__sub-menu
                   li
-                    a(href="/") Cáp HDMI
+                    a(href="/") Bàn phím
                   li
-                    a(href="/") Cáp HDMI
+                    a(href="/") Chuột
                   li
-                    a(href="/") Cáp HDMI
+                    a(href="/") Bàn di chuột
+                  li
+                    a(href="/") Keycap
+                  li
+                    a(href="/") Switch
               li.header__menu-item
-                a(href="/") Dây cáp
+                a(href="/") Phụ Kiện Laptop
               li.header__menu-item
-                a(href="/") Dây cáp
+                a(href="/") Linh Kiện Laptop
               li.header__menu-item
-                a(href="/") Dây cáp
+                a(href="/") Linh Kiện Laptop
+              li.header__menu-item
+                a(href="/") Linh Kiện Laptop
 
         .header__search
           .header__search-form
