--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+body {
+    color: #333;
+    font-size: 14px;
+    line-height: 1.6;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
