--- a/public/scss/pages/_home.scss
+++ b/public/scss/pages/_home.scss
@@ -1,33 +1,55 @@
 .section {
+    position: relative;
     padding: 0 15px 30px;
 }
 
 .section__title {
     margin-bottom: 21px;
+
     h3 {
         display: inline-block;
+        width: 100%;
         font-weight: 400;
         font-size: 17.5px;
         margin-bottom: 8px;
         padding-bottom: 7.5px;
-        border-bottom: 2px solid #d0011b;
+        border-bottom: 2px solid #ccc;
         text-transform: capitalize;
+
+        span {
+            padding-bottom: 11.5px;
+            border-bottom: 2px solid #d0011b;
+            margin-bottom: -2px;
+        }
     }
 }
 
 .section__main {
-    // display: grid;
-    // grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    // overflow: hidden;
-
-    // @include tablet {
-    //     grid-template-columns: repeat(3, 4fr);
-    // }
-
-    // @include mobile {
-    //     grid-template-columns: 1fr 1fr;
-    // }
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
+    margin: 0 10px;
+}
+
+.btn-slider {
+    display: block;
+    width: 36px;
+    height: 36px;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    position: absolute;
+    top: 40%;
+    background-color: #fff;
+
+    i {
+        font-size: 2rem;
+    }
+
+    &--prev {
+        left: -5px;
+    }
+
+    &--next {
+        right: -5px;
+    }
 }
