--- a/views/base.pug
+++ b/views/base.pug
@@ -9,7 +9,7 @@ head
 body
     include partials/_header
     block content 
-        .container 
+        .wrapper.container
             include partials/_section
             include partials/_section
     include partials/_footer
