--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -1,5 +1,20 @@
 body {
+    font-size: 1.4rem;
     font-family: Helvetica, Arial, sans-serif;
-    font-size: 14px;
     line-height: 1.6;
+    text-rendering: optimizeSpeed;
+}
+
+a {
+    text-decoration: none;
+    color: #333;
+}
+
+.heading-primary {
+    font-size: 1.5em;
+    line-height: 1.3;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    color: #333;
+    margin-bottom: 10.5px;
 }
