--- a/public/scss/components/_product.scss
+++ b/public/scss/components/_product.scss
@@ -1,4 +1,5 @@
-.product {
+.product-box {
+    position: relative;
     padding: 10px;
     flex: 1 0 20%;
 
@@ -10,46 +11,88 @@
         flex: 1 0 calc(100% / 2);
     }
 
-    img {
-        width: 100%;
-        object-fit: cover;
+    &__badge {
+        display: inline-block;
+        position: absolute;
+        top: 20px;
+        left: 10px;
 
-        &::after {
-            content: '';
+        span {
             display: block;
-            padding-bottom: 100%;
+            min-width: 36px;
+            height: 36px;
+            line-height: 36px;
+            text-align: center;
+            border-radius: 50%;
+            color: #fff;
+            background: #ff9800;
+            font-size: 0.9em;
+        }
+    }
+
+    &__image {
+        img {
+            width: 100%;
+            object-fit: cover;
+
+            &::after {
+                content: '';
+                display: block;
+                padding-bottom: 100%;
+            }
+        }
+    }
+
+    &__text {
+        padding: 0.8em 0;
+        font-size: 1.15em;
+
+        &-name {
+            margin-top: 0.3em;
+            margin-bottom: 1em;
+            font-size: 0.9em;
+            line-height: 1.3;
+            height: 2.5em;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+
+        &-info {
+            font-size: 1.4rem;
         }
     }
 }
 
-.product__name {
-    margin: 7px 0 21px 0;
-}
-
-.product-info {
-    padding: 10px 0;
-}
-
-.product-info__rating {
+.product-box__rating {
     font-size: 13px;
     text-align: left;
     display: block;
     overflow: hidden;
     position: relative;
-    width: 65px;
+    width: 75px;
     height: 13px;
     line-height: 13px;
     letter-spacing: 0;
     font-family: 'Font Awesome 6 Pro';
     font-weight: 900;
     -webkit-font-smoothing: antialiased;
+    margin-bottom: 1em;
 
     i {
         color: ff9800;
     }
 }
 
-.product-info__price--sale {
+.product-box__price {
+    font-size: 1.2em;
+    line-height: 1;
+}
+
+.product-box__price--sale {
     opacity: 0.6;
     font-size: 15px;
     font-weight: 400;
@@ -58,14 +101,17 @@
     text-decoration: line-through;
 }
 
-.product-info__price--current {
+.product-box__price--current {
     color: #d0011b;
     font-size: 16px;
 }
 
-.product-info__status {
+.product-box__status {
     color: #009627;
-    display: block;
     font-size: 0.9em;
     margin-top: 0.5em;
+
+    i {
+        margin-right: 3px;
+    }
 }
