--- a/public/scss/layout/_header.scss
+++ b/public/scss/layout/_header.scss
@@ -1,4 +1,4 @@
-.header__main {
+.header {
     height: 80px;
     -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.15);
@@ -6,285 +6,294 @@
     @include mobile {
         height: 60px;
     }
-}
 
-.header__inner {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    max-width: 1170px;
-    padding: 0 15px;
-    margin: 0 auto;
-
-    @include tablet {
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-
-.header__logo {
-    display: flex;
-    align-items: center;
-    width: 200px;
-    margin-right: 14px;
-    a {
-        max-width: 50px;
-    }
-    img {
-        width: 100%;
-        max-height: 80px;
+    &__inner {
+        display: flex;
+        height: 100%;
+        padding: 0 15px;
+        margin: 0 auto;
 
         @include tablet {
-            height: 36px;
+            justify-content: space-between;
+            align-items: center;
         }
     }
 
-    @include tablet {
-        width: auto;
-        margin-right: 0;
-    }
-}
+    &__logo {
+        display: flex;
+        align-items: center;
+        width: 200px;
+        margin-right: 14px;
 
-.header__menu {
-    margin-left: 20px;
-    display: flex;
-    align-items: center;
-    background: #d0011b;
-    color: #fff;
-    line-height: 38px;
-    text-transform: capitalize;
-    cursor: pointer;
-    padding: 0 10px;
-    border-radius: 3px;
-    white-space: nowrap;
-    position: relative;
+        @include tablet {
+            width: auto;
+            margin-right: 0;
+        }
 
-    &:hover .container {
-        background: rgba(0, 0, 0, 0.3);
-    }
+        a {
+            max-width: 50px;
+        }
 
-    @include tablet {
-        display: none;
-    }
-}
+        img {
+            width: 100%;
+            max-height: 80px;
 
-.header__menu-icon {
-    i {
-        margin-right: 6px;
-        font-size: 16px;
-    }
-    &:hover {
-        ~ {
-            .header__menu-wrap {
-                display: block;
+            @include tablet {
+                height: 36px;
             }
         }
     }
-}
 
-.header__menu-wrap {
-    touch-action: pan-y;
-    display: none;
-    position: absolute;
-    top: 100%;
-    margin-top: 0;
-    left: 0;
-    width: 100%;
-    padding: 0;
-    min-width: 250px;
-    border-top: 21px solid transparent;
-    background-color: #fff;
-
-    &:hover {
-        display: block;
-    }
-}
-
-.header__menu-item {
-    position: relative;
-
-    & > a {
+    &__menu {
         position: relative;
-        font-size: 0.9em;
-        line-height: 38px;
-        padding: 0 1em;
         display: flex;
         align-items: center;
-        min-width: 250px;
-
-        &::after {
-            content: '';
-            position: absolute;
-            top: 50%;
-            right: 0.5em;
-            margin-top: -5px;
-            height: 0;
-            width: 0;
-            border: 5px solid transparent;
-            border-left-color: #5f5a5a;
-        }
-    }
-
-    &:hover {
-        background-color: #f5f5f5;
-
-        .header__sub-menu {
-            display: block;
-        }
-    }
-}
-
-.header__sub-menu {
-    display: none;
-    height: 494px;
-    position: absolute;
-    left: 100%;
-    top: 0;
-    z-index: 99;
-    background: #fff;
-    list-style: none;
-    min-width: 250px;
-    -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-
-    li:hover {
-        background-color: #f5f5f5;
-    }
-
-    a {
-        font-size: 0.9em;
-        line-height: 38px;
-        padding: 0 1em;
-        display: flex;
-        align-items: center;
-        min-width: 250px;
-    }
-}
-
-.header__search {
-    display: flex;
-    align-items: center;
-    flex: 1;
-
-    @include tablet {
-        display: none;
-    }
-}
-
-.header__search-form {
-    display: flex;
-    width: 100%;
-    font-weight: 400;
-    z-index: 9;
-
-    input {
-        height: 40px;
-        border-right: none;
-        padding: 5px 10px;
-        border-radius: 0;
-        outline: none;
-        max-width: 100%;
-        width: 92%;
-        vertical-align: middle;
-        border: 1px solid #e5e5e5;
-        border-radius: 3px 0 0 3px;
-        color: #333;
-    }
-
-    button {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        border: none;
+        padding: 0 10px;
+        margin-left: 20px;
+        color: #fff;
         background: #d0011b;
+        line-height: 38px;
+        text-transform: capitalize;
+        border-radius: 3px;
+        white-space: nowrap;
         cursor: pointer;
-        border-radius: 0 3px 3px 0;
-        i {
-            color: #fff;
-            font-size: 1.3em;
-        }
-    }
-}
 
-.header__nav {
-    display: flex;
-    align-items: center;
-    padding-left: 14px;
-    ul {
-        display: flex;
-        align-items: center;
-        list-style: none;
-        li {
-            background-color: #f1f1f1;
-
-            @include tablet {
-                background-color: transparent;
-            }
-
-            a {
-                display: inline-flex;
-                flex-wrap: wrap;
-                color: #333;
-                line-height: 16px;
-                font-family: 'Lato', sans-serif;
-                text-transform: capitalize;
-                height: 40px;
-                align-items: center;
-                padding: 0 10px;
-                span {
-                    b {
-                        display: block;
-                        color: #d0011b;
-                        font-weight: 400;
-                    }
-                }
-                i {
-                    margin-left: 5px;
-                    font-size: 18px;
-                }
-            }
-
-            @include tablet {
-                &:not(:last-child) {
-                    display: none;
-                }
-            }
-        }
-    }
-}
-
-.header-divider {
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-    height: 30px;
-    vertical-align: middle;
-    position: relative;
-    margin: 0 7.5px;
-}
-
-.header-cart {
-    position: relative;
-}
-
-.header__nav-cart {
-    display: flex;
-    align-items: center;
-    background: #f1f1f1;
-    padding: 10px;
-    border-radius: 3px;
-
-    @include tablet {
-        background: transparent;
-    }
-
-    span {
         @include tablet {
             display: none;
         }
     }
 
-    i {
-        margin-left: 5px;
-        min-width: 1em;
-        font-size: 18px;
+    &__menu-icon {
+        display: flex;
+        align-items: center;
+
+        i {
+            font-size: 16px;
+            margin-right: 6px;
+        }
+
+        &:hover {
+            ~ {
+                .header__menu-list {
+                    display: block;
+                }
+            }
+        }
     }
+
+    &__menu-list {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        display: none;
+        width: 100%;
+        min-width: 250px;
+        padding: 0;
+        margin-top: 0;
+        border-top: 21px solid transparent;
+        background-color: #fff;
+        touch-action: pan-y;
+
+        &:hover {
+            display: block;
+        }
+    }
+
+    &__menu-item {
+        position: relative;
+
+        & > a {
+            position: relative;
+            font-size: 0.9em;
+            line-height: 38px;
+            padding: 0 1em;
+            display: flex;
+            align-items: center;
+            min-width: 250px;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                right: 0.5em;
+                height: 0;
+                width: 0;
+                margin-top: -5px;
+                border: 5px solid transparent;
+                border-left-color: #5f5a5a;
+            }
+        }
+
+        &:hover {
+            background-color: #f5f5f5;
+
+            .header__sub-menu {
+                display: block;
+            }
+        }
+    }
+
+    &__sub-menu {
+        display: none;
+        height: 494px;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        z-index: 99;
+        background: #fff;
+        list-style: none;
+        min-width: 250px;
+        -webkit-box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+        box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+
+        li:hover {
+            background-color: #f5f5f5;
+        }
+
+        a {
+            font-size: 0.9em;
+            line-height: 38px;
+            padding: 0 1em;
+            display: flex;
+            align-items: center;
+            min-width: 250px;
+        }
+    }
+
+    &__search {
+        display: flex;
+        align-items: center;
+        flex: 1;
+
+        @include tablet {
+            display: none;
+        }
+    }
+
+    &__search-form {
+        display: flex;
+        width: 100%;
+        font-weight: 400;
+        z-index: 9;
+
+        input {
+            flex: 1;
+            height: 40px;
+            border-right: none;
+            padding: 5px 10px;
+            border-radius: 0;
+            outline: none;
+            width: 100%;
+            max-width: 100%;
+            vertical-align: middle;
+            border: 1px solid #e5e5e5;
+            border-radius: 3px 0 0 3px;
+            color: #333;
+            font: inherit;
+        }
+
+        button {
+            width: 40px;
+            height: 40px;
+            line-height: 40px;
+            border: none;
+            background: #d0011b;
+            cursor: pointer;
+            border-radius: 0 3px 3px 0;
+
+            i {
+                color: #fff;
+                font-size: 1.3em;
+            }
+        }
+    }
+
+    &__nav {
+        display: flex;
+        align-items: center;
+        padding-left: 14px;
+    }
+
+    &__nav-list {
+        display: flex;
+        align-items: center;
+        list-style: none;
+    }
+
+    &__nav-item {
+        background-color: #f1f1f1;
+
+        @include tablet {
+            background-color: transparent;
+        }
+
+        a {
+            display: inline-flex;
+            flex-wrap: wrap;
+            color: #333;
+            line-height: 16px;
+            font-family: 'Lato', sans-serif;
+            text-transform: capitalize;
+            height: 40px;
+            align-items: center;
+            padding: 0 10px;
+
+            span b {
+                display: block;
+                color: #d0011b;
+                font-weight: 400;
+            }
+
+            i {
+                font-size: 18px;
+                margin-left: 5px;
+            }
+        }
+
+        @include tablet {
+            &:not(:last-child) {
+                display: none;
+            }
+        }
+    }
+
+    &__cart {
+        display: inline-block;
+        position: relative;
+    }
+
+    &__cart-link {
+        display: flex;
+        align-items: center;
+        padding-right: 55px !important;
+        border-radius: 3px;
+
+        i {
+            min-width: 1em;
+        }
+    }
+}
+
+.cart-quantity {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin-left: 5px;
+    color: #fff;
+    background: #d0011b;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 0 3px 3px 0;
+}
+
+.header-divider {
+    position: relative;
+    height: 30px;
+    margin: 0 7.5px;
+    border-left: 1px solid rgba(0, 0, 0, 0.1);
+    vertical-align: middle;
 }
