--- a/views/partials/_header.pug
+++ b/views/partials/_header.pug
@@ -1,64 +1,62 @@
 
 header.header
-  div
-    .header__main
-      .header__inner
-        .mobile-nav
+  .header__inner.container
+    .mobile-nav
+      i.fa-solid.fa-bars
+    .header__logo
+      a(href="/")
+        img(src="https://phukienabc.com/wp-content/uploads/2022/10/phukienabc.svg", alt="logo")
+      .header__menu
+        .header__menu-icon
           i.fa-solid.fa-bars
-        .header__logo
-          a(href="/")
-            img(src="https://phukienabc.com/wp-content/uploads/2022/10/phukienabc.svg", alt="logo")
-          .header__menu
-            .header__menu-icon
-              i.fa-solid.fa-bars
-              span Sản Phẩm
-            ul.header__menu-wrap
-              li.header__menu-item
-                a(href="/") Bàn Phím, Chuột, Gaming Gear
-                ul.header__sub-menu
-                  li
-                    a(href="/") Bàn phím
-                  li
-                    a(href="/") Chuột
-                  li
-                    a(href="/") Bàn di chuột
-                  li
-                    a(href="/") Keycap
-                  li
-                    a(href="/") Switch
-              li.header__menu-item
-                a(href="/") Phụ Kiện Laptop
-              li.header__menu-item
-                a(href="/") Linh Kiện Laptop
-              li.header__menu-item
-                a(href="/") Linh Kiện Laptop
-              li.header__menu-item
-                a(href="/") Linh Kiện Laptop
+          span Sản Phẩm
+        ul.header__menu-list
+          li.header__menu-item
+            a(href="/") Bàn Phím, Chuột, Gaming Gear
+            ul.header__sub-menu
+              li
+                a(href="/") Bàn phím
+              li
+                a(href="/") Chuột
+              li
+                a(href="/") Bàn di chuột
+              li
+                a(href="/") Keycap
+              li
+                a(href="/") Switch
+          li.header__menu-item
+            a(href="/") Phụ Kiện Laptop
+          li.header__menu-item
+            a(href="/") Linh Kiện Laptop
+          li.header__menu-item
+            a(href="/") Thiết Bị Nghe Nhìn
+          li.header__menu-item
+            a(href="/") Phần mềm, Hệ Điều Hành
 
-        .header__search
-          .header__search-form
-            input(type="search", placeholder="Tìm kiếm ...", autocomplete="off")
-            button
-              i.fa-solid.fa-magnifying-glass
-              
-        .header__nav
-          ul
-            li
-              a(href="tel:0985588012")
-                span
-                  | Gọi mua hàng
-                  b 098.5588.012
-                i.fa-solid.fa-phone-flip
-            li.header-divider
-            li
-              a(href="tel:0858577555")
-                span
-                  | Kinh Doanh 1
-                  b 0858.577.555
-                i.fa-solid.fa-phone-flip
-            li.header-divider
-            li.header-cart
-              a.header__nav-cart
-                span Giỏ hàng 
-                i.fa-solid.fa-bag-shopping
-                span.cart-quantity 0
+    .header__search
+      .header__search-form
+        input(type="search", placeholder="Tìm kiếm ...", autocomplete="off")
+        button
+          i.fa-solid.fa-magnifying-glass
+          
+    .header__nav
+      ul.header__nav-list
+        li.header__nav-item
+          a(href="tel:0985588012")
+            span
+              | Gọi mua hàng
+              b 098.5588.012
+            i.fa-solid.fa-phone-flip
+        li.header-divider.hide-on-tablet
+        li.header__nav-item
+          a(href="tel:0858577555")
+            span
+              | Kinh Doanh 1
+              b 0858.577.555
+            i.fa-solid.fa-phone-flip
+        li.header-divider.hide-on-tablet
+        li.header__nav-item.header__cart
+          a.header__cart-link
+            span.hide-on-tablet Giỏ hàng 
+            i.fa-solid.fa-bag-shopping
+            span.cart-quantity 0
