--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,18 +112,157 @@ a {
       margin-bottom: 1em; }
       .cart__content > form > table thead tr th {
         padding: 0.5em;
-        padding-left: 0;
         text-align: left;
         border-bottom: 1px solid #ececec !important;
         line-height: 1.05; }
         .cart__content > form > table thead tr th:last-child {
           text-align: right; }
+      .cart__content > form > table tbody tr td {
+        text-align: left;
+        border-bottom: 1px solid #ececec !important;
+        line-height: 1.3; }
+      .cart__content > form > table tbody tr:last-child td {
+        padding: 15px 0 10px; }
+        .cart__content > form > table tbody tr:last-child td button {
+          display: inline-block;
+          letter-spacing: 0.03em;
+          text-align: center;
+          color: currentColor;
+          border: 1px solid transparent;
+          vertical-align: middle;
+          border-radius: 3px;
+          margin-top: 0;
+          margin-right: 1em;
+          margin-bottom: 1em;
+          text-shadow: none;
+          line-height: 2.4em;
+          min-height: 2.5em;
+          opacity: 0.6;
+          background-color: #d0011b;
+          color: #fff;
+          border-color: rgba(0, 0, 0, 0.05);
+          padding: 0 1.2em;
+          max-width: 100%;
+          font: inherit; }
+
+.cart-product-remove {
+  width: 20px;
+  padding: 15px 0 !important; }
+  .cart-product-remove a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    font-size: 16px !important;
+    line-height: 24px !important;
+    border-radius: 100%;
+    color: #666;
+    text-align: center;
+    border: 1px solid #888; }
+
+.cart-product-thumbnail {
+  padding: 15px 0.5em;
+  min-width: 60px;
+  max-width: 90px;
+  width: 90px; }
+  .cart-product-thumbnail a img {
+    width: 100%;
+    height: 100%; }
+
+.cart-product-name,
+.cart-product-price,
+.cart-product-quantity {
+  padding: 15px 0.5em; }
+
+.product-subtotal {
+  padding: 15px 0 15px 0.5em; }
+
+.continue-shopping {
+  float: left; }
+
+.button-continue-shopping {
+  display: block;
+  border: 2px solid #d0011b;
+  color: #d0011b;
+  background-color: #fff;
+  margin-bottom: 1em;
+  margin-right: 1em;
+  text-shadow: none;
+  line-height: 2.4em;
+  min-height: 2.5em;
+  padding: 0 1.2em;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  text-align: center;
+  max-width: 100%; }
 
 .cart__collaterals {
   border-left: 1px solid #ececec;
   padding: 0 30px;
   margin-bottom: 0;
   padding-bottom: 0; }
+  .cart__collaterals table {
+    font-size: 14px;
+    width: 100%;
+    margin-bottom: 1em;
+    border-color: #ececec;
+    border-spacing: 0; }
+  .cart__collaterals table:first-child thead tr th {
+    border-width: 3px;
+    padding: 0.5em 0;
+    text-align: left;
+    border-bottom: 1px solid #ececec !important;
+    border-style: solid;
+    line-height: 1.05; }
+  .cart__collaterals table:nth-child(2) {
+    border-spacing: 0; }
+    .cart__collaterals table:nth-child(2) tbody tr th,
+    .cart__collaterals table:nth-child(2) tbody tr td {
+      letter-spacing: 0;
+      font-weight: 400;
+      padding: 0.5em;
+      border-bottom: 1px solid #ececec; }
+    .cart__collaterals table:nth-child(2) tbody tr th {
+      text-align: left;
+      padding-left: 0;
+      line-height: 1.05; }
+    .cart__collaterals table:nth-child(2) tbody tr td {
+      text-align: right;
+      padding-right: 0;
+      line-height: 1.3; }
+      .cart__collaterals table:nth-child(2) tbody tr td ul {
+        list-style: none; }
+        .cart__collaterals table:nth-child(2) tbody tr td ul label {
+          font-weight: 400;
+          margin: 0;
+          padding: 0.5em 0;
+          opacity: 0.8;
+          display: inline-block; }
+
+.wc-proceed-to-checkout {
+  margin: 1.5em 0; }
+  .wc-proceed-to-checkout a {
+    min-width: 100%;
+    margin-right: 0;
+    display: block;
+    background-color: #d0011b;
+    margin-bottom: 1em;
+    border-color: rgba(0, 0, 0, 0.05);
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    margin-top: 0;
+    margin-right: 1em;
+    text-shadow: none;
+    line-height: 2.4em;
+    min-height: 2.5em;
+    letter-spacing: 0.03em;
+    cursor: pointer;
+    text-align: center;
+    padding: 0 1.2em;
+    max-width: 100%; }
 
 .product-box {
   position: relative;
