--- a/views/cart.pug
+++ b/views/cart.pug
@@ -21,19 +21,19 @@ block content
                             table
                                 thead 
                                     tr 
-                                        th(colspan='3') Sản phẩm
+                                        th(colspan='3', style="padding-left: 0") Sản phẩm
                                         th Giá tiền
                                         th Số lượng
-                                        th Tạm tính
+                                        th(style="padding-right: 0") Tạm tính
                                 tbody 
                                     tr
-                                        td.product-remove
+                                        td.cart-product-remove
                                             a.remove(href='')
-                                                i.fa-regular.fa-circle-xmark
-                                        td.product-thumbnail
+                                                i.fa-solid.fa-xmark
+                                        td.cart-product-thumbnail
                                             a(href='https://phukienabc.com/tai-nghe-dareu-eh416/')
                                                 img(width='208' height='208' src='https://phukienabc.com/wp-content/uploads/2022/10/Tai-Nghe-DAREU-EH416-208x208.jpg' alt='Tai Nghe Dareu EH416' decoding='async' loading='lazy' srcset='//phukienabc.com/wp-content/uploads/2022/10/Tai-Nghe-DAREU-EH416-208x208.jpg 208w, //phukienabc.com/wp-content/uploads/2022/10/Tai-Nghe-DAREU-EH416-100x100.jpg 100w, //phukienabc.com/wp-content/uploads/2022/10/Tai-Nghe-DAREU-EH416.jpg 640w' sizes='(max-width: 208px) 100vw, 208px')
-                                        td.product-name
+                                        td.cart-product-name
                                             a(href='https://phukienabc.com/tai-nghe-dareu-eh416/') Tai Nghe Dareu EH416 Dây USB, Giả Lập 7.1
                                             //- div
                                             //-     span 1 x 
@@ -41,21 +41,21 @@ block content
                                             //-         bdi
                                             //-         | 349.000
                                             //-         span &#x20AB;
-                                        td.product-price(data-title='Giá tiền')
+                                        td.cart-product-price(data-title='Giá tiền')
                                             span
                                                 bdi
                                                     | 349.000
                                                     span &#x20AB;
-                                        td.product-quantity(data-title='Số lượng')
-                                            div
-                                                div
-                                                    svg(focusable='false' style='width: 10px; height: 10px;' viewbox='0 0 10 2' role='presentation')
-                                                        path(d='M10 0v2H0V0z' fill='currentColor')
-                                                //- label Tai Nghe Dareu EH416 Dây USB, Giả Lập 7.1
-                                                input(type='number' step='1' min='0' max='' value='1' title='SL' size='4' placeholder='' inputmode='numeric')
-                                                div
-                                                    svg(focusable='false' style='width: 10px; height: 10px;' viewbox='0 0 10 10' role='presentation')
-                                                        path(d='M6 4h4v2H6v4H4V6H0V4h4V0h2v4z' fill='currentColor' fill-rule='evenodd')
+                                        td.cart-product-quantity(data-title='Số lượng')
+                                            form 
+                                                .quantity
+                                                    .btn.btn--minus
+                                                        svg(focusable='false', style='width: 10px; height: 10px;', viewBox='0 0 10 2', role='presentation')
+                                                            path(d='M10 0v2H0V0z', fill='currentColor')
+                                                    input(type='number', value='1')
+                                                    .btn.btn--plus
+                                                        svg(focusable='false', style='width: 10px; height: 10px;', viewBox='0 0 10 10', role='presentation')
+                                                            path(d='M6 4h4v2H6v4H4V6H0V4h4V0h2v4z', fill='currentColor', fill-rule='evenodd')
                                         td.product-subtotal(data-title='Tạm tính')
                                             span
                                                 bdi
@@ -65,8 +65,8 @@ block content
                                         td(colspan='6')
                                             .continue-shopping
                                                 a.button-continue-shopping(href='/')
-                                                | &larr;&nbsp;Mua thêm sản phẩm khác
-                                            button.button(type='submit' name='update_cart' value='Cập nhật giỏ hàng' disabled='' aria-disabled='true') Cập nhật giỏ hàng
+                                                    | &larr;&nbsp;Mua thêm sản phẩm khác
+                                            button(type='submit' name='update_cart' value='Cập nhật giỏ hàng' disabled='' aria-disabled='true') Cập nhật giỏ hàng
                                             //- input(type='hidden' name='woocommerce-cart-nonce' value='8a76d046ff')
                                             //- input(type='hidden' name='_wp_http_referer' value='/gio-hang/')
                     .cart__collaterals
@@ -79,34 +79,34 @@ block content
                                 table
                                     tbody
                                         tr
-                                            th Giá tiền sản phẩm
+                                            th(style='padding-left: 0') Giá tiền sản phẩm
                                             td
                                                 span
                                                     bdi
                                                         | 349.000
                                                         span &#x20AB;
                                         tr
-                                            td(colspan='2')
-                                                table
+                                            td(colspan='2', style="padding: 0")
+                                                table(style="margin-bottom: 0")
                                                     tbody
                                                         tr  
-                                                            th Phí vận chuyển
-                                                            td
+                                                            th(style="border: none") Phí vận chuyển
+                                                            td(style="border: none")
                                                                 ul
                                                                     li
                                                                         input(type='hidden'  data-index='0' value='flat_rate:3')
                                                                         label
-                                                                        | Giao hàng có tính phí:
+                                                                            | Giao hàng có tính phí:
                                                                         span
                                                                             bdi
-                                                                            | 20.000
+                                                                            |  20.000
                                                                             span &#x20AB;
-                                                                p
-                                                                    | Ship hàng tới
-                                                                    strong Huyện Ba Vì, Hà Nội
+                                                                p(style="margin: 0.5em 0")
+                                                                    | Ship hàng tới 
+                                                                    strong Hà Nội
                                                                     | .
-                                                                form
-                                                                    a Thay Thay đổi địa chỉ
+                                                                form(style="margin-top: 0.5em")
+                                                                    a Thay đổi địa chỉ
                                         tr
                                             th Tổng chi phí
                                             td
