--- a/views/base.pug
+++ b/views/base.pug
@@ -11,5 +11,6 @@ body
     block content 
         .wrapper.container
             include partials/_section
-            include partials/_section
+            //- include partials/_section
+            //- include ./cartPopup
     include partials/_footer
