--- a/views/partials/_footer.pug
+++ b/views/partials/_footer.pug
@@ -6,47 +6,42 @@ footer.footer
           .policy__icon
             i.fa-solid.fa-check
           .policy__content
-            h5.uppercase Ch&#x1EA5;t L&#x1B0;&#x1EE3;ng
-            p S&#x1EA3;n ph&#x1EA9;m ch&iacute;nh h&atilde;ng, b&#x1EC1;n v&agrave; &dstrok;&#x1EB9;p.
+            h5.uppercase Chất Lượng
+            p Sản phẩm chính hãng, bền và đẹp.
       .footer-top__wrapper-col
         .policy
           .policy__icon
             i.fa-solid.fa-face-smile
           .policy__content
-            h5.uppercase H&agrave;i L&ograve;ng
-            p Tr&#x1EA3;i nghi&#x1EC7;m mua h&agrave;ng tuy&#x1EC7;t v&#x1EDD;i.
+            h5.uppercase Hài Lòng
+            p Trải nghiệm mua hàng tuyệt vời.
       .footer-top__wrapper-col
         .policy
           .policy__icon
             i.fa-solid.fa-retweet
           .policy__content
-            h5.uppercase D&#x1EC5; D&agrave;ng
-            p &Dstrok;&#x1ED5;i tr&#x1EA3; v&agrave; b&#x1EA3;o h&agrave;nh nhanh ch&oacute;ng.
+            h5.uppercase Dễ Dàng
+            p Đổi trả và bảo hành nhanh chóng.
       .footer-top__wrapper-col
         .policy
           .policy__icon
             i.fa-solid.fa-money-check-dollar
           .policy__content
-            h5.uppercase An To&agrave;n
-            p Thanh to&aacute;n &dstrok;&#x1A1;n gi&#x1EA3;n v&agrave; b&#x1EA3;o m&#x1EAD;t.
+            h5.uppercase An Toàn
+            p Thanh toán đơn giản và bảo mật.
   .footer-center
     .footer-center__wrapper
       .footer-center__wrapper-col
         .widget
-          span.widget__title Gi&#x1EDB;i thi&#x1EC7;u
+          span.widget__title Giới thiệu
           .is-divider
           p
-            a(href='') PH&#x1EE4; KI&#x1EC6;N ABC
-            |  - Chuy&ecirc;n cung c&#x1EA5;p c&aacute;c s&#x1EA3;n ph&#x1EA9;m ph&#x1EE5;
-            |                 ki&#x1EC7;n PC, laptop, &dstrok;i&#x1EC7;n tho&#x1EA1;i, m&aacute;y t&iacute;nh b&#x1EA3;ng,... ch&iacute;nh h&atilde;ng, gi&aacute;
-            |                 t&#x1ED1;t, ch&#x1EA5;t l&#x1B0;&#x1EE3;ng cao. H&atilde;y &dstrok;&#x1EBF;n v&#x1EDB;i ch&uacute;ng t&ocirc;i &dstrok;&#x1EC3; c&oacute; tr&#x1EA3;i nghi&#x1EC7;m mua
-            |                 s&#x1EAF;m t&#x1ED1;t nh&#x1EA5;t, c&ugrave;ng nhi&#x1EC1;u &#x1B0;u &dstrok;&atilde;i c&oacute; gi&aacute; tr&#x1ECB; d&agrave;nh cho m&#x1ECD;i kh&aacute;ch
-            |                 h&agrave;ng.
+            a(href='') PHỤ KIỆN ABC
+            |  - Chuyên cung cấp các sản phẩm phụ kiện PC, laptop, điện thoại, máy tính bảng,... chính hãng, giá tốt, chất lượng cao. Hãy đến với chúng tôi để có trải nghiệm mua sắm tốt nhất, cùng nhiều ưu đãi có giá trị dành cho mọi khách hàng.
           p
-            | &Dstrok;&#x1ECB;a ch&#x1EC9;:
+            | Địa chỉ:
             strong
-              | S&#x1ED1; 26 Ng&otilde; 8/170 L&ecirc; Quang &Dstrok;&#x1EA1;o, Ph&uacute; &Dstrok;&ocirc;, Nam T&#x1EEB; Li&ecirc;m, H&agrave;
-              | N&#x1ED9;i
+              | Số 26 Ngõ 8/170 Lê Quang Đạo, Phú Đô, Nam Từ Liêm, Hà Nội
           p
             | Hotline: 
             strong 098.5588.012
@@ -57,76 +52,71 @@ footer.footer
             strong phukienabc.official@gmail.com
       .footer-center__wrapper-col
         .widget
-          span.widget__title Gi&#x1EDB;i thi&#x1EC7;u
+          span.widget__title Thông tin, chính sách
           .is-divider
-          p
-            a(href='') PH&#x1EE4; KI&#x1EC6;N ABC
-            |  - Chuy&ecirc;n cung c&#x1EA5;p c&aacute;c s&#x1EA3;n ph&#x1EA9;m ph&#x1EE5;
-            |                 ki&#x1EC7;n PC, laptop, &dstrok;i&#x1EC7;n tho&#x1EA1;i, m&aacute;y t&iacute;nh b&#x1EA3;ng,... ch&iacute;nh h&atilde;ng, gi&aacute;
-            |                 t&#x1ED1;t, ch&#x1EA5;t l&#x1B0;&#x1EE3;ng cao. H&atilde;y &dstrok;&#x1EBF;n v&#x1EDB;i ch&uacute;ng t&ocirc;i &dstrok;&#x1EC3; c&oacute; tr&#x1EA3;i nghi&#x1EC7;m mua
-            |                 s&#x1EAF;m t&#x1ED1;t nh&#x1EA5;t, c&ugrave;ng nhi&#x1EC1;u &#x1B0;u &dstrok;&atilde;i c&oacute; gi&aacute; tr&#x1ECB; d&agrave;nh cho m&#x1ECD;i kh&aacute;ch
-            |                 h&agrave;ng.
-          p
-            | &Dstrok;&#x1ECB;a ch&#x1EC9;:
-            strong
-              | S&#x1ED1; 26 Ng&otilde; 8/170 L&ecirc; Quang &Dstrok;&#x1EA1;o, Ph&uacute; &Dstrok;&ocirc;, Nam T&#x1EEB; Li&ecirc;m, H&agrave;
-              | N&#x1ED9;i
-          p
-            | Hotline: 
-            strong 098.5588.012
-            |  |
-            strong 0858.577.555
-          p
-            | Email: 
-            strong phukienabc.official@gmail.com
+          ul 
+            li 
+              a Liên hệ, hợp tác
+            li 
+              a Hướng dẫn mua hàng
+            li 
+              a Chính sách bảo hành, đổi trả, hoàn tiền
+            li 
+              a Chính sách giao hàng
+            li 
+              a Chính sách thanh toán
+            li 
+              a Chính sách bảo mật thông tin khách hàng
       .footer-center__wrapper-col
         .widget
-          span.widget__title Gi&#x1EDB;i thi&#x1EC7;u
+          span.widget__title Danh mục sản phẩm
           .is-divider
-          p
-            a(href='') PH&#x1EE4; KI&#x1EC6;N ABC
-            |  - Chuy&ecirc;n cung c&#x1EA5;p c&aacute;c s&#x1EA3;n ph&#x1EA9;m ph&#x1EE5;
-            |                 ki&#x1EC7;n PC, laptop, &dstrok;i&#x1EC7;n tho&#x1EA1;i, m&aacute;y t&iacute;nh b&#x1EA3;ng,... ch&iacute;nh h&atilde;ng, gi&aacute;
-            |                 t&#x1ED1;t, ch&#x1EA5;t l&#x1B0;&#x1EE3;ng cao. H&atilde;y &dstrok;&#x1EBF;n v&#x1EDB;i ch&uacute;ng t&ocirc;i &dstrok;&#x1EC3; c&oacute; tr&#x1EA3;i nghi&#x1EC7;m mua
-            |                 s&#x1EAF;m t&#x1ED1;t nh&#x1EA5;t, c&ugrave;ng nhi&#x1EC1;u &#x1B0;u &dstrok;&atilde;i c&oacute; gi&aacute; tr&#x1ECB; d&agrave;nh cho m&#x1ECD;i kh&aacute;ch
-            |                 h&agrave;ng.
-          p
-            | &Dstrok;&#x1ECB;a ch&#x1EC9;:
-            strong
-              | S&#x1ED1; 26 Ng&otilde; 8/170 L&ecirc; Quang &Dstrok;&#x1EA1;o, Ph&uacute; &Dstrok;&ocirc;, Nam T&#x1EEB; Li&ecirc;m, H&agrave;
-              | N&#x1ED9;i
-          p
-            | Hotline: 
-            strong 098.5588.012
-            |  |
-            strong 0858.577.555
-          p
-            | Email: 
-            strong phukienabc.official@gmail.com
+          ul 
+            li 
+              a Dây Cáp
+            li 
+              a Bộ Chia Tín Hiệu
+            li 
+              a Bộ Chuyển Tín Hiệu
+            li 
+              a Linh Kiện Laptop
+            li 
+              a Phụ Kiện Laptop
+            li 
+              a Phụ Kiện Điện Thoại
+            li 
+              a Phụ Kiện Lưu Trữ
+            li 
+              a Thiết Bị Nghe Nhìn
+            li 
+              a Thiết Bị Mạng
+            li 
+              a Thiết Bị Lưu Trữ
+            li 
+              a Bàn Phím, Chuột, Gaming Gear
+            li 
+              a Phần Mềm, Hệ Điều Hành
+            li 
+              a Thiết Bị Hội Nghị
       .footer-center__wrapper-col
         .widget
-          span.widget__title Gi&#x1EDB;i thi&#x1EC7;u
+          span.widget__title Sản phẩm hot
           .is-divider
-          p
-            a(href='') PH&#x1EE4; KI&#x1EC6;N ABC
-            |  - Chuy&ecirc;n cung c&#x1EA5;p c&aacute;c s&#x1EA3;n ph&#x1EA9;m ph&#x1EE5;
-            |                 ki&#x1EC7;n PC, laptop, &dstrok;i&#x1EC7;n tho&#x1EA1;i, m&aacute;y t&iacute;nh b&#x1EA3;ng,... ch&iacute;nh h&atilde;ng, gi&aacute;
-            |                 t&#x1ED1;t, ch&#x1EA5;t l&#x1B0;&#x1EE3;ng cao. H&atilde;y &dstrok;&#x1EBF;n v&#x1EDB;i ch&uacute;ng t&ocirc;i &dstrok;&#x1EC3; c&oacute; tr&#x1EA3;i nghi&#x1EC7;m mua
-            |                 s&#x1EAF;m t&#x1ED1;t nh&#x1EA5;t, c&ugrave;ng nhi&#x1EC1;u &#x1B0;u &dstrok;&atilde;i c&oacute; gi&aacute; tr&#x1ECB; d&agrave;nh cho m&#x1ECD;i kh&aacute;ch
-            |                 h&agrave;ng.
-          p
-            | &Dstrok;&#x1ECB;a ch&#x1EC9;:
-            strong
-              | S&#x1ED1; 26 Ng&otilde; 8/170 L&ecirc; Quang &Dstrok;&#x1EA1;o, Ph&uacute; &Dstrok;&ocirc;, Nam T&#x1EEB; Li&ecirc;m, H&agrave;
-              | N&#x1ED9;i
-          p
-            | Hotline: 
-            strong 098.5588.012
-            |  |
-            strong 0858.577.555
-          p
-            | Email: 
-            strong phukienabc.official@gmail.com
+          ul
+            li 
+              a Chuột Dareu EM908 (Đen/Trắng/Hồng)
+            li 
+              a Bàn Phím Cơ Dareu EK87 Đen/Trắng/Hồng (Blue/Red/Brown Switch)
+            li 
+              a Chuột Không Dây Dareu LM115G (Đen/Trắng/Hồng)
+            li 
+              a Tai Nghe Dareu EH416 Dây USB, Giả Lập 7.1
+            li 
+              a Bàn Phím Cơ Dareu EK810 Đen/Hồng (Blue/Red/Brown Switch)
+            li 
+              a Chuột Không Dây Dareu EM901 (Đen/Trắng/Hồng)
+            li 
+              a Chuột Dareu LM130 Multi-LED
   .footer-bottom
-    .footer-bottom__copyright
+    div
       | Copyright 2019 &copy; PH&#x1EE4; KI&#x1EC6;N ABC
