--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -7,12 +7,15 @@
 
 @import 'components/_breadCrumbs';
 @import 'components/_cart';
+@import 'components/_cartPopup';
 @import 'components/_product';
 
 @import 'layout/_footer';
+@import 'layout/_grid';
 @import 'layout/_header';
 @import 'layout/_navigation';
 
+@import 'pages/_category';
 @import 'pages/_home';
 @import 'pages/_productDetails';
 
@@ -88,6 +91,19 @@
         margin-bottom: 1em;
         strong {
             font-weight: 400;
+        }
+    }
+
+    ul {
+        list-style: none;
+
+        li + li {
+            border-top: 1px solid #ececec;
+        }
+
+        a {
+            display: inline-block;
+            padding: 6px 0;
         }
     }
 }
@@ -465,4 +481,12 @@
         padding: 0 1.2em;
         letter-spacing: 0.03em;
     }
+}
+
+.btn--prev {
+    left: -12px;
+}
+
+.btn--next {
+    right: -12px;
 }
