code interface page account login

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'layout/_header';
 @import 'layout/_navigation';
 
+@import 'pages/_account';
 @import 'pages/_category';
 @import 'pages/_home';
 @import 'pages/_productDetails';
