--- a/public/css/style.css
+++ b/public/css/style.css
@@ -837,6 +837,78 @@ a {
   .mobile-nav i {
     font-size: 20px; }
 
+.account__header {
+  text-align: center;
+  background-color: #f7f7f7;
+  border-top: 1px solid #ececec;
+  border-bottom: 1px solid #ececec; }
+  .account__header > div {
+    padding: 15px;
+    min-height: 60px; }
+  .account__header h1 {
+    line-height: 1.2;
+    font-weight: 400;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5em; }
+
+.account__container {
+  padding: 30px 0; }
+  .account__container > div {
+    padding: 0 15px; }
+
+.account-login h3 {
+  line-height: 1.2;
+  font-weight: 400;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.25em;
+  margin-bottom: 0.5em;
+  text-rendering: optimizeSpeed; }
+
+.account-login__form {
+  margin-bottom: 1em; }
+  .account-login__form .form-group {
+    margin-bottom: 10px; }
+    .account-login__form .form-group label {
+      display: block;
+      margin-bottom: 0.4em;
+      color: #222; }
+    .account-login__form .form-group input[type='text'] {
+      padding: 5px 10px;
+      border-radius: 0;
+      max-width: 100%;
+      width: 100%;
+      vertical-align: middle;
+      border: 1px solid #e5e5e5;
+      border-radius: 3px 0 0 3px;
+      color: #333;
+      margin-bottom: 1em;
+      font: inherit;
+      outline: none; }
+    .account-login__form .form-group input[type='checkbox'] {
+      display: inline;
+      margin: 10px 10px 10px 0;
+      font-size: 16px; }
+    .account-login__form .form-group button {
+      font: inherit;
+      color: #fff;
+      background-color: #d0011b;
+      border-color: rgba(0, 0, 0, 0.05);
+      display: inline-block;
+      letter-spacing: 0.03em;
+      cursor: pointer;
+      text-align: center;
+      text-decoration: none;
+      border: 1px solid transparent;
+      vertical-align: middle;
+      border-radius: 3px;
+      margin-top: 0;
+      margin-right: 1em;
+      text-shadow: none;
+      line-height: 2.4em;
+      min-height: 2.5em;
+      padding: 0 1.2em;
+      max-width: 100%; }
+
 .category__header {
   display: flex;
   align-items: center;
